# scaling_rs

./: .gitignore  Cargo.toml  README.md  tree.md
src/: main.rs
src/handlers/: alert_handler.rs  scaling.rs
src/scaling/: alert_handler.rs  cache.rs  function_cache.rs  function_cacher.rs  function_meta.rs  function_scaler.rs  hpa.rs  mod.rs  prometheus.rs  scale_zero.rs  scaling_config.rs  scaling_error.rs  service_query.rs  test_service_query.rs
