[package]
name = "scaling_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0"
log = "0.4"
env_logger = "0.11"  # 或者选择其他日志实现库
thiserror = "1.0"